--- a/_includes/css.html
+++ b/_includes/css.html
@@ -11,8 +11,8 @@
 <link href="/css/justified-nav.css" rel="stylesheet">
 
 <!-- Verbesserung der Text-Darstellung -->
-<link href="/docs-assets/css/docs.css" rel="stylesheet">
-<link href="/docs-assets/css/pygments-manni.css" rel="stylesheet">
+<link href="http://getbootstrap.com/docs-assets/css/docs.css" rel="stylesheet">
+<link href="http://getbootstrap.com/docs-assets/css/pygments-manni.css" rel="stylesheet">
 
 <!-- Bildergalerie -->
 <link rel="stylesheet" type="text/css" href="http://blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
