--- a/_includes/js.html
+++ b/_includes/js.html
@@ -8,8 +8,8 @@
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 
 <!-- Verbesserte Textdarstellung -->
-<script src="/docs-assets/js/holder.js"></script>
-<script src="/docs-assets/js/application.js"></script>
+<script src="http://getbootstrap.com/docs-assets/js/holder.js"></script>
+<script src="http://getbootstrap.com/docs-assets/js/application.js"></script>
 
 <!-- Bildergalerie -->
 <script src="/js/blueimp-gallery.min.js"></script> 
