--- a/_includes/js.html
+++ b/_includes/js.html
@@ -12,7 +12,7 @@
 <script src="http://getbootstrap.com/docs-assets/js/application.js"></script>
 
 <!-- Bildergalerie -->
-<script src="/js/blueimp-gallery.min.js"></script> 
+<script src="http://blueimp.github.io/Gallery/js/blueimp-gallery.min.js"></script> 
 <script>
 document.getElementById('links').onclick = function (event) {
   event = event || window.event;
