--- a/_includes/css.html
+++ b/_includes/css.html
@@ -2,7 +2,7 @@
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Erweitertes Basis-CSS -->
-<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
+<link href="http://getbootstrap.com/dist/css/bootstrap-theme.min.css" rel="stylesheet">
 
 <!-- Verwendung unklar -->
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
