--- a/_includes/css.html
+++ b/_includes/css.html
@@ -8,7 +8,7 @@
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 
 <!-- Navigation -->
-<link href="/css/justified-nav.css" rel="stylesheet">
+<link href="http://getbootstrap.com/examples/justified-nav/justified-nav.css" rel="stylesheet">
 
 <!-- Verbesserung der Text-Darstellung -->
 <link href="http://getbootstrap.com/docs-assets/css/docs.css" rel="stylesheet">
